# matilda

./: .gitignore  LICENSE  README.md
data_crawling_system/: README.md  docker-compose.yml  docker-down.services.sh  docker-up.processors.sh  docker-up.services.sh  docker-up.technologies.sh  pom.xml
data_crawling_system/matilda-analyzer/: Dockerfile  pom.xml
data_crawling_system/matilda-auth/: Dockerfile  pom.xml
data_crawling_system/matilda-base/: pom.xml
recommendation_system/: .env.example  README.md  pyproject.toml
recommendation_system/recomsystem/: main.py
recommendation_system/recomsystem/api/: anthropic.py  api_shared.py  google.py  mistral.py  openai.py
recommendation_system/recomsystem/config/: config.py  default_structured_output.py  logging_config.py  predefined_prompts_for_usecases.py  processing_config.py  prompts.yaml  supported_llms.py  supported_llms.yaml  szenarios.py
recommendation_system/recomsystem/connectors/neo4j/: neo4j_connector.py
recommendation_system/recomsystem/handler/: prompt_handler.py  request_handler.py  tech_extraction_handler.py
recommendation_system/recomsystem/matilda/: relevance_classification.py  relevance_processing.py  relevance_prompts.py  shared.py
recommendation_system/recomsystem/matilda/model/: relevance_model_simple.py
recommendation_system/recomsystem/model/: chat_request.py  response.py  tech_extraction.py
recommendation_system/recomsystem/processing/: matilda.py  maven_parser.py  prompt.py  query_llm.py
recommendation_system/recomsystem/ui/: chat.py  chat_handler.py  css.py  visualization.py
recommendation_system/tests/: recommendation_processor_no_filter_test.py  recommendation_processor_test.py
(+387 files in other folders)
